--- a/RetroCalc/Base.lproj/LaunchScreen.storyboard
+++ b/RetroCalc/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,14 +19,58 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="Pqx-IV-ZAH">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="ENu-Sn-GjK">
+                                <rect key="frame" x="38" y="28" width="339" height="47"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="47" id="u5Y-fB-Ab5"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="3c1-bf-t2s">
+                                <rect key="frame" x="0.0" y="660" width="414" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="Xgg-YM-k5h"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="zeF-3g-lY1">
+                                <rect key="frame" x="125" y="318" width="164" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="CXF-Xj-xr8"/>
+                                    <constraint firstAttribute="width" constant="164" id="F72-WB-Zq6"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="ENu-Sn-GjK" secondAttribute="trailing" constant="17" id="05d-Z1-Z62"/>
+                            <constraint firstItem="ENu-Sn-GjK" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="18" id="6B7-0H-IIW"/>
+                            <constraint firstItem="Pqx-IV-ZAH" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Ke5-gP-ofK"/>
+                            <constraint firstAttribute="trailing" secondItem="Pqx-IV-ZAH" secondAttribute="trailing" id="O9p-xV-1aS"/>
+                            <constraint firstItem="Pqx-IV-ZAH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Ybz-uo-gUz"/>
+                            <constraint firstItem="ENu-Sn-GjK" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="dAb-zQ-n54"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="3c1-bf-t2s" secondAttribute="bottom" id="em2-XR-Aju"/>
+                            <constraint firstItem="3c1-bf-t2s" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mFW-hR-3sS"/>
+                            <constraint firstAttribute="trailing" secondItem="3c1-bf-t2s" secondAttribute="trailing" id="nYf-Vj-JdM"/>
+                            <constraint firstItem="zeF-3g-lY1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="viy-eL-Zbw"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Pqx-IV-ZAH" secondAttribute="bottom" id="wk8-fV-4Sb"/>
+                            <constraint firstItem="zeF-3g-lY1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="x6p-qR-e2N"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="335.625" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
